# NSUKit

./: .gitignore  CMakeLists.txt  README.md  icd.json  version.h.in
cmake/: Utility.cmake
docs/: Doxyfile  header.html  index.html
docs/html/0.1.0/: _n_s_u_kit_8h_source.html  annotated.html  annotated_dup.js  base__itf_8cpp_source.html  base__itf_8h_source.html  base__kit_8cpp_source.html  base__kit_8h_source.html  base__mw_8cpp_source.html  base__mw_8h_source.html  classes.html  classnsukit_1_1_base_kit-members.html  classnsukit_1_1_base_kit.html  classnsukit_1_1_i___base_cmd_u_itf-members.html  classnsukit_1_1_i___base_cmd_u_itf.html  classnsukit_1_1_i___base_reg_mw-members.html  classnsukit_1_1_i___base_reg_mw.html  classnsukit_1_1_i___base_stream_mw-members.html  classnsukit_1_1_i___base_stream_mw.html  classnsukit_1_1_i___base_stream_u_itf-members.html  classnsukit_1_1_i___base_stream_u_itf.html  classnsukit_1_1_i_c_d_reg_mw-members.html  classnsukit_1_1_i_c_d_reg_mw.html  classnsukit_1_1_i_c_d_reg_mw.js  classnsukit_1_1_mixin___native_reg_cmd-members.html  classnsukit_1_1_mixin___native_reg_cmd.html  classnsukit_1_1_mixin___virtual_reg_cmd-members.html  classnsukit_1_1_mixin___virtual_reg_cmd.html  classnsukit_1_1_n_s_u_soc-members.html  classnsukit_1_1_n_s_u_soc.html  classnsukit_1_1_n_s_u_soc.js  classnsukit_1_1_p_c_i_e_cmd_u_itf-members.html  classnsukit_1_1_p_c_i_e_cmd_u_itf.html  classnsukit_1_1_p_c_i_e_cmd_u_itf.js  classnsukit_1_1_p_c_i_e_stream_u_itf-members.html  classnsukit_1_1_p_c_i_e_stream_u_itf.html  classnsukit_1_1_reg_operation_mixin-members.html  classnsukit_1_1_reg_operation_mixin.html  classnsukit_1_1_serial_cmd_u_itf-members.html  classnsukit_1_1_serial_cmd_u_itf.html  classnsukit_1_1_serial_stream_u_itf-members.html  (+101 more)
docs/html/1.0.0/: _d_s_op_use_case_8cpp_source.html  _n_s_u_kit_8h_source.html  annotated.html  annotated_dup.js  base__itf_8cpp_source.html  base__itf_8h_source.html  base__kit_8cpp_source.html  base__kit_8h_source.html  base__mw_8cpp_source.html  base__mw_8h_source.html  c__socket_8cpp_source.html  c__socket_8h_source.html  class_thread_safe_queue-members.html  class_thread_safe_queue.html  classes.html  classnsukit_1_1_base_kit-members.html  classnsukit_1_1_base_kit.html  classnsukit_1_1_i___base_cmd_u_itf-members.html  classnsukit_1_1_i___base_cmd_u_itf.html  classnsukit_1_1_i___base_reg_mw-members.html  classnsukit_1_1_i___base_reg_mw.html  classnsukit_1_1_i___base_stream_mw-members.html  classnsukit_1_1_i___base_stream_mw.html  classnsukit_1_1_i___base_stream_u_itf-members.html  classnsukit_1_1_i___base_stream_u_itf.html  classnsukit_1_1_i_c_d_reg_mw-members.html  classnsukit_1_1_i_c_d_reg_mw.html  classnsukit_1_1_json_wrapper-members.html  classnsukit_1_1_json_wrapper.html  classnsukit_1_1_mixin___native_reg_cmd-members.html  classnsukit_1_1_mixin___native_reg_cmd.html  classnsukit_1_1_mixin___virtual_reg_cmd-members.html  classnsukit_1_1_mixin___virtual_reg_cmd.html  classnsukit_1_1_n_s_u_soc-members.html  classnsukit_1_1_n_s_u_soc.html  classnsukit_1_1_n_s_u_soc.js  classnsukit_1_1_p_c_i_e_cmd_u_itf-members.html  classnsukit_1_1_p_c_i_e_cmd_u_itf.html  classnsukit_1_1_p_c_i_e_cmd_u_itf.js  classnsukit_1_1_p_c_i_e_stream_u_itf-members.html  (+113 more)
docs/html/1.1.0/: _d_s_op_use_case_8cpp_source.html  _hardware_sync_8cpp_source.html  _hardware_sync_8h_source.html  _n_s_u_kit_8h_source.html  _super_a_w_g_8cpp_source.html  _super_a_w_g_8h_source.html  annotated.html  annotated_dup.js  base__itf_8cpp_source.html  base__itf_8h_source.html  base__kit_8cpp_source.html  base__kit_8h_source.html  base__mw_8cpp_source.html  base__mw_8h_source.html  c__socket_8cpp_source.html  c__socket_8h_source.html  class_thread_safe_queue-members.html  class_thread_safe_queue.html  classes.html  classnsukit_1_1_base_kit-members.html  classnsukit_1_1_base_kit.html  classnsukit_1_1_i___base_cmd_u_itf-members.html  classnsukit_1_1_i___base_cmd_u_itf.html  classnsukit_1_1_i___base_reg_mw-members.html  classnsukit_1_1_i___base_reg_mw.html  classnsukit_1_1_i___base_stream_mw-members.html  classnsukit_1_1_i___base_stream_mw.html  classnsukit_1_1_i___base_stream_u_itf-members.html  classnsukit_1_1_i___base_stream_u_itf.html  classnsukit_1_1_i_c_d_reg_mw.html  (+136 more)
docs/markdown/: 01_Introduction.md  02_Quickstart.md  03_Professional.md  04_ICDScheme.md  05_CustomProtocolLayer.md  06_CustomProcessingLayer.md  07_ProtocolDetails.md
examples/: CMakeLists.txt  DSOpUseCase.cpp  README.md  data_download.cpp  data_upload.cpp  data_uploadfeiting.cpp  firmware_update.cpp  hardware_sync.cpp  link_only_eth.cpp  multi_chnl_upload.cpp  send_icd_command_tcp.cpp  soc_config.cpp  stream_awg.cpp  zerocopy_with_cuda.cu
examples/XDMALoopTest/: main.cpp  main.h
include/: NSUKit.h  base_kit.h  version.h  xdma_api.h
include/base/: base_kit.h  c_socket.h  config.h  type.h
include/high_level/: ADTrigger.h  FunctionCall.h  HardwareSync.h  SuperAWG.h
include/interface/: base_itf.h  interface.h  pcie_interface.h  serial_interface.h  sim_interface.h  tcp_interface.h
include/json/: version.h
include/middleware/: base_mw.h  icd_parser.h  virtual_chnl.h
include/utils/: config.h  type.h
lib/: NSUKit.lib  xdma_api.lib
src/: base_kit.cpp  base_kit.h
src/base/: base_kit.cpp  c_socket.cpp  config.cpp  type.cpp
src/high_level/: ADTrigger.cpp  FunctionCall.cpp  HardwareSync.cpp  SuperAWG.cpp
src/interface/: base_itf.cpp  base_itf.h  interface.h  pcie_interface.cpp  pcie_interface.h  serial_interface.cpp  sim_interface.cpp  simulation_interface.cpp  simulation_interface.h  tcp_interface.cpp  tcp_interface.h
src/lib_json/: json_value.cpp  json_writer.cpp
src/middleware/: base_mw.cpp  base_mw.h  icd_parser.cpp  icd_parser.h  json_icd_wrapper.h  middleware.h  virtual_chnl.cpp  virtual_chnl.h
src/tools/: config.cpp  config.h  type.cpp  type.h
src/utils/: config.cpp  type.cpp
tests/: CMakeLists.txt  data_upload_test.cpp  function_call.cpp  hsync_test.cpp  interface_test.cpp  namespace_test.cpp  nsukit_test.cpp  test_config.h  type_test.cpp  xdma_loop_test.cpp  xdma_ring.cpp
(+1491 files in other folders)
